3607.	[bug]		dnssec-keygen had broken 'Invalid keyfile' error
			message. [RT #34045]

	--- 9.9.4b1 released ---

3605.	[port]		win32: Addressed several compatibility issues
			with newer versions of Visual Studio. [RT #33916]

3603.	[bug]		Install <isc/stat.h>. [RT #33956]

3601.	[bug]		Added to PKCS#11 openssl patches a value len
			attribute in DH derive key. [RT #33928]

3600.	[cleanup]	dig: Fixed a typo in the warning output when receiving
			an oversized response. [RT #33910]

3599.	[tuning]	Check for pointer equivalence in name comparisons.
			[RT #18125]

3596.	[port]		Updated win32 build documentation, added
			dnssec-verify. [RT #22067]

3594.	[maint]		Update config.guess and config.sub. [RT #33816]

3592.	[doc]		Moved documentation of rndc command options to the
			rndc man page. [RT #33506]

3590.	[bug]		When using RRL on recursive servers, defer
			rate-limiting until after recursion is complete;
			also, use correct rcode for slipped NXDOMAIN
			responses.  [RT #33604]

3588.	[bug]		dig: addressed a memory leak in the sigchase code
			that could cause a shutdown crash.  [RT #33733]

3587.	[func]		'named -g' now checks the logging configuration but
			does not use it. [RT #33473]

3586.	[buf]		Handle errors in xmlDocDumpFormatMemoryEnc. [RT #33706]

3584.	[security]	Caching data from an incompletely signed zone could
			trigger an assertion failure in resolver.c [RT #33690]

3583.	[bug]		Address memory leak in GSS-API processing [RT #33574]

3582.	[bug]		Silence false positive warning regarding missing file
			directive for inline slave zones.  [RT #33662]

3581.	[bug]		Changed the tcp-listen-queue default to 10. [RT #33029]

3580.	[bug]		Addressed a possible race in acache.c [RT #33602]

3579.	[maint]		Updates to PKCS#11 openssl patches, supporting
			versions 0.9.8y, 1.0.0k, 1.0.1e [RT #33463]

3578.	[bug]		'rndc -c file' now fails if 'file' does not exist.
			[RT #33571]

3577.	[bug]		Handle zero TTL values better. [RT #33411]
